--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>mosh hello world react</title>
+  <title>simple template for generic projects</title>
 </head>
 
 <body>
